# Enterprise-AI-Onboarding-Compliance-Accelerator-Agentic-LMS-

./: .env.example  .gitignore  Dockerfile  README.md  Research.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  FRONTEND_PRD.md.resolved  MILESTONES.md  PRD.md  TECH_STACK.md  demo.md  langfuse.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  instrumentation.js  main.jsx
frontend/src/api/: client.js  sseParser.js
frontend/src/components/: ChatWindow.jsx  ChatWindow.module.css  SetupScreen.jsx  SetupScreen.module.css  Sidebar.jsx  Sidebar.module.css  SupervisorModal.jsx  SupervisorModal.module.css
scratch/: db_diag.py
scripts/: check_models.py  ingest_sops.py  run_evaluation.py  stress_test_api.py
src/agents/: assessor.py  certifier.py  explainer.py  planner.py  router.py  status.py  tools.py
src/api/: chat.py  dependencies.py  routers.py  server.py  sessions.py  supervisor.py
src/core/: config.py  database.py  llm.py  observability.py
src/graph/: workflow.py
src/ingestion/: pipeline.py
src/schemas/: requests.py  responses.py  state.py
tests/: test_agents.py  test_api.py  test_evaluation_sanity.py  test_graph.py  test_ingestion.py  test_observability.py
