[project]
name = "enterprise-agentic-lms"
version = "0.1.0"
description = "Enterprise AI Onboarding & Compliance Accelerator — Agentic LMS powered by LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.5.9",
    "fastapi==0.136.1",
    "langchain>=1.2.18",
    "langchain-chroma==1.1.0",
    "langchain-core==1.3.3",
    "langchain-google-genai==4.2.2",
    "langchain-text-splitters==1.1.2",
    "langfuse==4.6.1",
    "langgraph==1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-checkpoint-postgres>=2.0.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pypdf==6.10.2",
    "psycopg[binary,pool]>=3.2.4",
    "python-multipart>=0.0.27",
    "sse-starlette>=3.4.2",
    "uvicorn==0.46.0",
]

[dependency-groups]
dev = [
    "mypy==2.0.0",
    "pytest==9.0.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff==0.15.12",
]

# === Ruff (Linter + Formatter) ===
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# === Mypy (Type Checker) ===
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "langchain_google_genai.*",
    "langchain_chroma.*",
    "langchain_text_splitters.*",
    "langfuse.*",
    "langgraph.*",
    "chromadb.*",
    "unstructured.*",
    "pypdf.*",
]
ignore_missing_imports = true

# === Pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
